# learn-rust

./: .gitignore
code/aws-projects/default-lambda-project/: Cargo.toml
code/aws-projects/default-lambda-project/src/: main.rs
code/aws-projects/http-lambda/: Cargo.toml
code/aws-projects/http-lambda-project/: Cargo.toml
code/aws-projects/rust-lambda-reading-dynamo/: Cargo.toml  readme.md  rust_lambda_helpers.zsh
code/aws-projects/rust-lambda-reading-dynamo/src/: main.rs
code/cargo-projects/async-stripe-demo/: Cargo.toml
code/cargo-projects/async-stripe-demo/src/: main.rs
code/cargo-projects/stripe_requests/: Cargo.toml
code/cargo-projects/stripe_requests/src/: main.rs
code/learn-rust/: Cargo.toml  README.md
code/learn-rust/src/: main.rs
docs/: cargo.md  guide.html  guide.md  installation.md  resources.md
docs/aws/: cargo-lambda.md  rust-lambdas.md
