[package]
name = "rust-lambda-reading-dynamo"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.53.0"
lambda_runtime = "0.13.0"
log = "0.4.22"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.132"
simple_logger = "5.0.0"
tokio = "1.41.1"
uuid = { version = "1.11.0", features = ["v4"] }
serde_dynamo = "4.2.14"
