[package]
name = "async-stripe-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-stripe = { version = "0.37.2", features = ["runtime-tokio-hyper"] }
serde_json = "1.0"
